--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand"><%= link_to "sample app", '#', id: "logo" %></a>
+      <a class="navbar-brand"><%= link_to "sample app", root_path, id: "logo" %></a>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-5">
       <ul class="nav navbar-nav navbar-right">
