--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'Sign up') %>
 <h1>Sign up</h1>
 
-<div class="row">
+<div class="row register">
   <div class="span6 offset3 form-group">
     <%= form_for(@user) do |f| %>
       <%= render 'shared/error_messages' %>
