--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -193,3 +193,27 @@ input {
   max-width: 500px;
   margin: 0px auto;
 }
+
+.row.edit {
+  max-width: 500px;
+  margin: 0px auto;
+}
+
+.gravatar-change {
+  margin-top: 30px;
+}
+
+/* Users index */
+
+.users {
+  list-style: none;
+  margin: 0;
+  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-top: 1px solid #eee;
+    &:last-child {
+      border-bottom: 1px solid #eee;
+    }
+  }
+}
