--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,9 +2,9 @@
 <h1>Update your profile</h1>
 
 <div class="row edit">
-  <div class="span6 offset3 form-group">
+  <div class="col-md-6 col-md-offset-3 form-group">
     <%= form_for(@user) do |f| %>
-      <%= render 'shared/error_messages' %>
+      <%= render 'shared/error_messages', object: f.object %>
 
       <%= f.label :name %>
       <%= f.text_field :name %>
@@ -21,7 +21,7 @@
       <%= f.button "Save changes", class: "btn btn-large btn-primary" %>
     <% end %>
     <div class="gravatar-change ">
-      <%= gravatar_for @user %>
+      <%= gravatar_for(@user)%>
       <a href="http://gravatar.com/emails">change</a>
     </div>
   </div>
