--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, @user.name) %>
 <div class="row">
-  <aside class="col-xs-6 col-md-4">
+  <aside class="span4">
     <section>
       <h1>
         <%= gravatar_for @user %>
@@ -8,13 +8,4 @@
       </h1>
     </section>
   </aside>
-  <div class="col-xs-12 col-md-8">
-    <% if @user.microposts.any? %>
-      <h3>Microposts (<%= @user.microposts.count %>)</h3>
-      <ol class="microposts">
-        <%= render @microposts %>
-      </ol>
-      <%= will_paginate @microposts %>
-    <% end %>
-  </div>
 </div>
